--- a/src/stylesheets/Main.css
+++ b/src/stylesheets/Main.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  background-image: url("../assets/desk.jpg");
   background-size: cover;
   background-position: center;
   /* min-height: 100vh; */
@@ -14,4 +15,14 @@ body {
 
 .container {
   display: flex;
+}
+
+@media (max-width: 899px) {
+  body {
+    background: rgb(0, 0, 0);
+
+    /* background-attachment: unset; */
+    background-size: cover;
+    /* background-repeat: no-repeat; */
+  }
 }
