--- a/src/stylesheets/About.css
+++ b/src/stylesheets/About.css
@@ -1,4 +1,11 @@
-.card {
-  border-radius: 10px;
-  background-color: rgba(230, 238, 255, 0.842);
+.about p {
+  font: inherit;
+  font-size: 1.5rem;
+  color: rgb(107, 107, 107);
+  margin-bottom: 1rem;
+}
+
+.about__items {
+  display: flex;
+  gap: 1rem;
 }
