--- a/src/stylesheets/Main.css
+++ b/src/stylesheets/Main.css
@@ -1,28 +1,53 @@
-body {
+* {
   margin: 0;
   padding: 0;
-  background-image: url("../assets/desk.jpg");
-  background-size: cover;
-  background-position: center;
-  /* min-height: 100vh; */
-  height: 100vh;
-  width: 100vw;
-  /* background-color: rgba(233, 106, 2, 0.336); */
-  background-attachment: fixed;
-  /* background-blend-mode: luminosity; */
   font-family: "Overpass", sans-serif;
+  text-decoration: none;
+  --PhoneInputCountryFlag-height: 2.2rem;
+  --PhoneInputCountrySelectArrow-color: white;
+  --PhoneInputCountrySelectArrow-opacity: 0.9;
 }
 
-.container {
+img {
+  display: block;
+}
+
+#root {
   display: flex;
+  flex-direction: column;
 }
 
-@media (max-width: 899px) {
-  body {
-    background: rgb(0, 0, 0);
+h2 {
+  font-size: 4rem;
+  color: rgb(99, 118, 163);
+}
 
-    /* background-attachment: unset; */
-    background-size: cover;
-    /* background-repeat: no-repeat; */
-  }
+.section {
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+  font-size: 1rem;
+  width: 61.8%;
+  max-width: 1000px;
+  align-self: center;
+}
+
+.card {
+  box-sizing: border-box;
+  border: rgb(197, 197, 197) 1px solid;
+  border-radius: 1rem;
+  padding: 2rem;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.068);
+}
+
+.card h3 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+.card p {
+  font-size: 1rem;
+}
+
+.footer {
+  background-color: rgb(42, 42, 46);
 }
