--- a/src/stylesheets/Portfolio.css
+++ b/src/stylesheets/Portfolio.css
@@ -1,167 +1,56 @@
-.container.portfolio {
-  margin: 50px 10%;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-auto-rows: 300px;
-  min-width: 0;
-  min-height: 0;
-  gap: 3em;
+.portfolio {
+  margin-top: 10rem;
 }
 
-/* .card.portfolio .content {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  justify-content: space-between;
-  height: 15rem;
-  gap: 1rem;
+/* .portfolio h2 {
+  font-size: 4rem;
+  color: rgb(23, 43, 90);
 } */
 
-.card.portfolio {
-  /* transform-origin: top; */
-  padding: 1em;
+.portfolio-items {
   display: grid;
-  grid-template-rows: min-content minmax(0, 1fr);
-  min-height: 0;
-  min-width: 0;
-  overflow: hidden;
-  gap: 1em;
-  transition: 0.3s;
-  background-color: rgba(255, 255, 255, 0.479);
-  cursor: pointer;
-  /* flex-basis: 1px; */
+  grid-auto-flow: row;
+  gap: 1rem;
 }
 
-.card.portfolio h2 {
-  text-decoration: none;
-  color: black;
-  font-size: 2rem;
-  transition: 0.3s;
-  text-shadow: 0 0 5px rgba(255, 255, 255, 0.918);
-  margin: 0;
-  /* margin: 1em; */
-}
-
-.card.portfolio a:hover {
-  color: rgb(0, 110, 255);
-}
-
-.card.portfolio > .content {
-  position: relative;
-  display: grid;
-  grid-template-columns: 0fr 1fr;
-  gap: 1em;
-  /* grid-auto-rows: 1fr; */
-  max-height: none;
-  min-height: 0;
-  transition: 0.5s;
-  /* flex-shrink: 1; */
-}
-
-.content > .image {
-  flex-grow: 1;
-  background-position: center center;
-}
-
-.content > .text {
+.portfolio__card {
+  box-sizing: border-box;
+  border: 1px rgb(207, 207, 207) solid;
+  width: 100%;
+  justify-self: center;
+  padding: 3rem;
+  border-radius: 1rem;
+  box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.075);
   display: flex;
-  flex-direction: column;
-  position: relative;
-  white-space: pre-wrap;
-  /* word-wrap: normal; */
-  word-wrap: normal;
-  overflow: hidden;
-  max-height: 100%;
-  /* width: 1fr; */
-
-  justify-content: space-between;
+  flex-direction: row;
+  justify-content: space-evenly;
+  min-height: 20rem;
+  gap: 2rem;
 }
 
-.content > .text > p {
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 25%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: rgba(0, 0, 0, 0);
-  /* max-height: 100%; */
-  overflow: hidden;
-  margin: 0;
-}
-
-.content > .text > button {
-  position: relative;
+.portfolio__card .content {
   flex-basis: 0;
-  /* bottom: 0;
-  right: 0; */
-  width: 50%;
-  min-width: fit-content;
-  margin-left: auto;
-  background: none;
-  border: none;
-  cursor: pointer;
-  transition: 0.3s;
+  flex-grow: 1;
 }
 
-.content > .text > button:hover {
-  color: rgb(0, 140, 255);
+.portfolio__card .content h3 {
+  font-size: 2rem;
+  line-height: 1;
+  margin-bottom: 0.5rem;
+}
+.portfolio__card .content a {
+  display: block;
+  color: rgb(0, 71, 224);
+  font-weight: bold;
+  margin-left: 1rem;
 }
 
-.card.portfolio:hover {
-  transform: scale(1.1);
-  background-color: white;
-  z-index: 100;
-  box-shadow: 10px 15px 5px rgba(0, 0, 0, 0.2);
+.portfolio__card .image {
+  flex-grow: 1;
+  background-size: contain;
+  background-position: center;
 }
 
-.card.portfolio:hover > .content {
-  grid-template-columns: 1fr 1fr;
-}
-
-.fullscreen-overlay {
-  position: fixed;
-  inset: 0;
-  background-color: rgba(0, 0, 0, 0.753);
-  z-index: 999;
-}
-
-.fullscreen-container {
-  display: grid;
-  grid-template-rows: min-content 1fr;
-  position: fixed;
-  inset: 20%;
-  background-color: rgba(255, 255, 255, 0.795);
-  min-height: 400px;
-  border-radius: 1em;
-  padding: 1em 2em;
-  /* min-height: 0; */
-  /* overflow-y: scroll; */
-}
-
-.fullscreen-container > .content {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  min-height: 0;
-  overflow: hidden;
-}
-
-.fullscreen-container > .content > .image {
-  min-height: 0;
-  background-size: cover;
-}
-
-.fullscreen-container > .content > .text {
-  overflow-y: auto;
-  min-height: 0;
-  text-shadow: 0 0 5px white;
-  font-size: 1.2rem;
-  padding-right: 1em;
-}
-
-@media (max-width: 1024px) {
-  .container.portfolio {
-    grid-template-columns: 1fr;
-  }
-
-  .card.portfolio > .content {
-    grid-template-columns: 1fr 1fr;
-  }
+.text p {
+  white-space: pre-line;
 }
