--- a/src/stylesheets/Portfolio.css
+++ b/src/stylesheets/Portfolio.css
@@ -19,8 +19,8 @@
   width: 100%;
   justify-self: center;
   padding: 3rem;
-  border-radius: 1rem;
-  box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.075);
+  /* border-radius: 1rem; */
+  /* box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.075); */
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
