--- a/src/stylesheets/Portfolio.css
+++ b/src/stylesheets/Portfolio.css
@@ -47,3 +47,22 @@
 .text p {
   white-space: pre-line;
 }
+
+/* Portfolio Page */
+.portfolio-page > a {
+  display: inline-block;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  /* background-color: tomato; */
+}
+
+.portfolio-page > a > svg {
+  fill: white;
+  transition: 100ms;
+}
+
+.portfolio-page > a:hover > svg {
+  fill: rgb(48, 250, 41);
+  filter: drop-shadow(0 0 5px white);
+}
