--- a/src/stylesheets/Main.scss
+++ b/src/stylesheets/Main.scss
@@ -53,7 +53,7 @@ h2 {
   left: 0;
   right: 0;
   top: 0;
-  padding: 0.5rem 4rem;
+  padding: 0.5rem 3rem;
   justify-content: space-between;
   z-index: 1;
   background-color: rgba(0, 0, 0, 0.74);
@@ -61,7 +61,11 @@ h2 {
   font-size: 1.5em;
   transition: 500ms;
   h3 {
-    align-self: flex-start;
+    display: inline-block;
+    // align-self: flex-start;
+    font-size: clamp(0.8rem, 4.5vw, 1.7rem);
+    line-height: 1;
+    // vertical-align: text-bottom;
     svg {
       vertical-align: text-bottom;
       fill: white;
@@ -69,10 +73,14 @@ h2 {
     }
   }
   a {
+    display: inline-block;
     color: inherit;
     text-decoration: none;
     align-self: flex-end;
-    justify-self: flex-end;
+    // justify-self: flex-end;
+  }
+  .home {
+    min-width: fit-content;
   }
 
   .home:hover {
@@ -87,6 +95,7 @@ h2 {
   .contact-info {
     display: flex;
     gap: 2rem;
+    font-size: clamp(0.7rem, 2.5vw, 1.5rem);
     :hover {
       color: $secondary-colour;
     }
@@ -100,4 +109,27 @@ h2 {
   background-color: rgb(42, 42, 46);
   display: flex;
   justify-content: center;
+}
+
+@media screen and (max-width: 650px) {
+  .header {
+    padding-left: 1rem;
+    .home {
+      svg {
+        max-width: 5vw;
+      }
+    }
+    .contact-info {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      gap: 0;
+
+      a {
+        align-self: flex-end;
+        justify-self: flex-end;
+        vertical-align: bottom;
+      }
+    }
+  }
 }
