--- a/src/stylesheets/Main.scss
+++ b/src/stylesheets/Main.scss
@@ -26,8 +26,9 @@ h2 {
   margin-bottom: 2rem;
   font-size: 1rem;
   width: 61.8%;
-  max-width: 1000px;
+  max-width: min(1000px, 100vw);
   align-self: center;
+  overflow-x: hidden;
 }
 
 .card {
@@ -91,7 +92,7 @@ h2 {
       color: $secondary-colour;
     }
   }
-  &.active {
+  &.hide {
     transform: translateY(-100%);
   }
 }
@@ -102,8 +103,14 @@ h2 {
   justify-content: center;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: $mobile-width) {
   .header {
+    top: auto;
+    bottom: 0;
+    margin-bottom: 0;
+    &.hide {
+      transform: translateY(100%);
+    }
     padding-left: 1rem;
     .home {
       svg {
