--- a/src/stylesheets/ProfileHeader.scss
+++ b/src/stylesheets/ProfileHeader.scss
@@ -49,6 +49,7 @@
     height: fit-content;
     position: relative;
     transform: translateY(-50%);
+    // z-index: -1;
     .image {
       position: relative;
       bottom: 0;
