--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -1,3 +1,9 @@
 $primary-colour: rgb(99, 110, 128);
 $secondary-colour: rgb(142, 184, 214);
 $mobile-width: 650px;
+
+:export {
+  primaryColour: $primary-colour;
+  secondaryColour: $secondary-colour;
+  mobileWidth: $mobile-width;
+}
