--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -1,5 +1,6 @@
-$primary-colour: rgb(99, 110, 128);
-$secondary-colour: rgb(142, 184, 214);
+$primary-colour: rgb(85, 110, 151);
+$secondary-colour: rgb(171, 205, 230);
+$highlight-colour: rgb(0, 180, 204);
 $mobile-width: 650px;
 
 :export {
