--- a/src/stylesheets/Contact.scss
+++ b/src/stylesheets/Contact.scss
@@ -1,16 +1,25 @@
+@import "_variables";
+
 .contact-form {
   box-sizing: border-box;
   border: solid 1px rgba(255, 255, 255, 0.281);
-  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.062);
+  border-radius: 1rem;
   display: flex;
   flex-direction: column;
-  padding: 20px 50px;
+  padding: 20px 30px;
   margin: 2rem;
   color: #fff;
+  min-width: min(90vw, 600px);
+  a {
+    color: white;
+    text-decoration: underline;
+    margin-bottom: 0.3rem;
+  }
 }
 
 .contact-header > h2 {
-  font-size: 2.4rem;
+  font-size: clamp(1.7rem, 4vw, 2.4rem);
   text-align: left;
   color: inherit;
 }
@@ -25,14 +34,12 @@
   box-sizing: border-box;
   border-radius: 5px;
   border: rgba(0, 0, 0, 0.651) solid 1px;
-  background-color: rgba(255, 255, 255, 0.123);
+  background-color: rgba(255, 255, 255, 0.164);
   width: 25rem;
-  /* height: 2.4rem; */
   color: rgb(255, 255, 255);
   font-size: 1.5rem;
   font-family: inherit;
   transition: all ease 0.3s;
-  /* width: 100%; */
   width: 100%;
   padding: 0.5rem 1rem;
 }
@@ -91,4 +98,14 @@ p.error {
 
 textarea {
   resize: none;
+}
+
+@media only screen and (max-width: $mobile-width) {
+  .contact-form {
+    .field {
+      .contact-input {
+        font-size: 1rem;
+      }
+    }
+  }
 }
