--- a/src/stylesheets/Skills.css
+++ b/src/stylesheets/Skills.css
@@ -7,19 +7,27 @@
   /* display: block; */
   list-style-type: none;
   width: 100%;
+  max-width: 600px;
   align-self: center;
 }
-.skills ul li {
-  font-size: 1.5rem;
+.skills ul li h3 {
   color: rgb(219, 116, 31);
+  border-bottom: rgb(216, 216, 216) solid 1px;
+  line-height: 1.3;
+  margin-bottom: 0.5rem;
+}
+.skills ul li {
+  font-size: 1.2rem;
   font-weight: bold;
   margin-top: 2rem;
 }
 
 .skills ul li p {
-  font-size: 1.4rem;
+  font-size: clamp(1rem, 2vw, 1.2rem);
+  /* font-size: 1rem; */
   color: rgb(54, 54, 54);
   font-weight: normal;
   text-align: left;
   margin-left: 3rem;
+  text-align: justify;
 }
