--- a/src/stylesheets/ProfileHeader.scss
+++ b/src/stylesheets/ProfileHeader.scss
@@ -21,7 +21,7 @@
       font-size: clamp(3rem, 7vw, 7rem);
     }
     .contact {
-      width: 50%;
+      // width: 50%;
       align-self: center;
       display: flex;
       flex-direction: column;
@@ -49,8 +49,10 @@
     height: fit-content;
     position: relative;
     transform: translateY(-50%);
-    // z-index: -1;
+    max-width: 100vw;
     .image {
+      max-width: 100vw;
+      max-height: 100vw;
       position: relative;
       bottom: 0;
       box-sizing: border-box;
