contact form polish

--- a/src/stylesheets/ProfileHeader.scss
+++ b/src/stylesheets/ProfileHeader.scss
@@ -19,6 +19,7 @@
       margin-top: 10rem;
       user-select: none;
       font-size: clamp(3rem, 7vw, 7rem);
+      line-height: 1;
     }
     .contact {
       // width: 50%;
