--- a/src/stylesheets/Contact.scss
+++ b/src/stylesheets/Contact.scss
@@ -14,28 +14,36 @@
   a {
     color: white;
     text-decoration: underline;
-    margin-bottom: 0.3rem;
+    // margin-bottom: 0.3rem;
   }
   .info {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-bottom: 1rem;
     .contact-details {
       display: flex;
       flex-direction: column;
-      font-size: clamp(1rem, 4vw, 1.4rem);
+      font-size: clamp(1.2rem, 4.5vw, 1.5rem);
+      // line-height: 1.7;
+      gap: 1rem;
     }
     .socials {
       display: flex;
       flex-direction: row;
       gap: 1rem;
+      align-items: flex-end;
+      // margin-bottom: 1rem;
     }
   }
   .contact-header {
     h2 {
-      font-size: clamp(1.7rem, 4vw, 2.4rem);
+      font-size: clamp(2rem, 8vw, 3rem);
       text-align: left;
       color: inherit;
+      // color: red;
+      line-height: 1;
+      margin-bottom: min(2vw, 1rem);
     }
   }
 
@@ -59,37 +67,9 @@
   }
 }
 
-// .contact-form > .field > .contact-input,
-// .PhoneInputInput {
-//   box-sizing: border-box;
-//   border-radius: 5px;
-//   border: rgba(0, 0, 0, 0.651) solid 1px;
-//   background-color: rgba(255, 255, 255, 0.164);
-//   width: 25rem;
-//   color: rgb(255, 255, 255);
-//   font-size: 1.5rem;
-//   font-family: inherit;
-//   transition: all ease 0.3s;
-//   width: 100%;
-//   padding: 0.5rem 1rem;
-// }
 .contact-input::selection {
   background: rgba(255, 255, 255, 0.226);
 }
-// .contact-form > .contact-input.button {
-//   border: none;
-//   outline: none;
-//   width: 50%;
-//   align-self: center;
-//   background-color: rgb(51, 114, 165);
-//   color: rgb(255, 255, 255);
-//   font: inherit;
-//   font-size: 1.5rem;
-//   padding: 0.5rem;
-//   border-radius: 0.2rem;
-//   cursor: pointer;
-//   transition: 0.2s;
-// }
 
 .contact-form > .contact-input.button {
   &:hover:enabled {
@@ -146,12 +126,13 @@ textarea {
       margin: 0;
       backface-visibility: visible;
       transform-style: preserve-3d;
-      // min-width: 800px;
-      width: clamp(0px, 600px, 95vw);
-      // max-width: 95vw;
-      height: fit-content;
-      // min-height: 500px;
+      width: 600px;
+      max-width: 95vw;
+      height: 400px;
+      max-height: 95vh;
+      // height: fit-content;
       transition: transform 0.7s;
+      // transform: rotateY(180deg);
       &.success {
         transform: rotateY(180deg);
       }
@@ -173,13 +154,16 @@ textarea {
           );
           color: $secondary-colour;
           display: grid;
+          grid-template-rows: 3.5rem 2rem 2rem 2rem 1fr;
           grid-template-columns: min-content 2fr;
           gap: 0.7rem 1.3rem;
           h2 {
+            font-size: 3rem;
             color: $secondary-colour;
             grid-column: 1 / 3;
             transition: color 0.4s;
             line-height: 1;
+            text-shadow: 0 0 8px rgba(0, 0, 0, 0.534);
           }
           .label {
             grid-column: 1;
@@ -189,16 +173,18 @@ textarea {
             width: fit-content;
             font-size: larger;
             margin-top: 0.5rem;
+            text-shadow: 0 0 8px rgba(0, 0, 0, 0.849);
           }
           .data {
             grid-column: 2;
             background-color: rgba(0, 0, 0, 0.678);
-            padding: 0.5rem;
+            padding: 0.3rem 0.7rem;
             border-radius: 0.5rem;
             font-size: larger;
-            white-space: pre;
-            max-height: 150px;
+            white-space: pre-wrap;
+            height: fit-content;
             overflow-y: auto;
+            max-height: 6.4rem;
           }
           .button {
             grid-column: 2;
@@ -216,16 +202,28 @@ textarea {
             rgb(31, 129, 39) 100%
           );
           h2 {
-            color: rgb(232, 255, 169);
+            color: rgb(244, 252, 130);
           }
           p {
-            font-size: larger;
+            font-size: 1.6rem;
+            color: #fff;
+            width: 80%;
+            margin-left: 3rem;
+            line-height: 1.2;
           }
+          p:first-of-type {
+            color: rgb(244, 252, 130);
+            text-align: left;
+            font-size: 1.4rem;
+            margin: 0;
+          }
+
           button.success {
             position: absolute;
             right: 1rem;
             bottom: 1rem;
             background-color: rgb(101, 22, 190);
+            width: 12rem;
           }
         }
       }
@@ -305,6 +303,11 @@ textarea {
   .contact-form {
     .info {
       flex-direction: column;
+      margin-bottom: 0.5rem;
+      .contact-details {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+      }
       .socials {
         img {
           max-width: 40px;
@@ -319,11 +322,20 @@ textarea {
   }
   .message.scene {
     .three-d-card {
+      height: 500px;
       .face.confirm {
-        grid-template-columns: 1fr;
-        gap: 0.2rem;
+        grid-template-rows: 3rem repeat(7, 1.2rem);
+        grid-template-columns: 100%;
+        // gap: 0.2rem;
+        h2 {
+          font-size: clamp(1.2rem, 8vw, 2.5rem);
+        }
         .data {
+          box-sizing: border-box;
           grid-column: 1;
+          margin: 0;
+          width: 100%;
+          max-height: 7.2rem;
         }
         .button {
           grid-column: 1;
