--- a/src/stylesheets/Main.scss
+++ b/src/stylesheets/Main.scss
@@ -58,22 +58,26 @@ h2 {
 .header {
   display: flex;
   position: fixed;
+
   left: 0;
   right: 0;
   top: 0;
-  padding: 0.5rem 3rem;
-  justify-content: space-between;
+  padding: 0.5rem 1rem;
+  max-width: 100vw;
+  align-items: baseline;
+  // justify-content: space-between;
+  gap: 2rem;
   z-index: 3;
-  background-color: rgba(0, 0, 0, 0.795);
   color: white;
+  background-color: rgba(0, 0, 0, 0.795);
   font-size: 1.5em;
   transition: 500ms;
   h3 {
     display: inline-block;
-    // align-self: flex-start;
     font-size: clamp(0.8rem, 4.5vw, 1.7rem);
     line-height: 1;
-    // vertical-align: text-bottom;
+    overflow-wrap: break-word;
+    // vertical-align: baseline;
     svg {
       vertical-align: text-bottom;
       fill: white;
@@ -84,11 +88,17 @@ h2 {
     display: inline-block;
     color: inherit;
     text-decoration: none;
-    align-self: flex-end;
+    // align-self: flex-end;
+    white-space: nowrap;
+    // vertical-align: baseline;
     // justify-self: flex-end;
   }
   .home {
-    min-width: fit-content;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 0;
+    // min-width: fit-content;
+    // vertical-align: baseline;
   }
 
   .home:hover {
@@ -101,6 +111,9 @@ h2 {
   }
 
   .contact-info {
+    justify-content: flex-end;
+    flex-grow: 1;
+    flex-shrink: 1;
     display: flex;
     gap: 2rem;
     font-size: clamp(0.7rem, 2.5vw, 1.5rem);
@@ -162,7 +175,7 @@ h2 {
       flex-direction: column;
       justify-content: space-around;
       gap: 0.5rem;
-      max-width: 100%;
+      // max-width: 100%;
 
       a {
         align-self: flex-end;
