--- a/src/stylesheets/Contact.scss
+++ b/src/stylesheets/Contact.scss
@@ -63,6 +63,9 @@
       transition: all ease 0.3s;
       width: 100%;
       padding: 0.5rem 1rem;
+      &.name {
+        text-transform: capitalize;
+      }
     }
   }
 }
