--- a/src/stylesheets/Skills.scss
+++ b/src/stylesheets/Skills.scss
@@ -1,3 +1,5 @@
+@import "_variables";
+
 .skills {
   display: flex;
   flex-direction: column;
@@ -24,10 +26,19 @@
 
 .skills ul li p {
   font-size: clamp(1rem, 2vw, 1.2rem);
-  /* font-size: 1rem; */
   color: rgb(54, 54, 54);
   font-weight: normal;
   text-align: left;
   margin-left: 3rem;
   text-align: justify;
+  ul {
+    list-style-type: disc;
+    li {
+      margin-top: auto;
+    }
+  }
+  a {
+    text-decoration: underline;
+    color: $primary-colour;
+  }
 }
