--- a/src/stylesheets/Main.scss
+++ b/src/stylesheets/Main.scss
@@ -19,7 +19,6 @@ img {
 h2 {
   font-size: clamp(3rem, 5vw, 4rem);
   color: $primary-colour;
-  // text-shadow: 0 0 20px rgba(0, 0, 0, 0.39);
 }
 
 .section {
@@ -30,7 +29,6 @@ h2 {
   max-width: min(1000px, 100vw);
   min-width: 600px;
   align-self: center;
-  // overflow-x: hidden;
 }
 
 .card {
@@ -58,14 +56,12 @@ h2 {
 .header {
   display: flex;
   position: fixed;
-
   left: 0;
   right: 0;
   top: 0;
   padding: 0.5rem 1rem;
   max-width: 100vw;
   align-items: baseline;
-  // justify-content: space-between;
   gap: 2rem;
   z-index: 3;
   color: white;
@@ -77,7 +73,6 @@ h2 {
     font-size: clamp(0.8rem, 4.5vw, 1.7rem);
     line-height: 1;
     overflow-wrap: break-word;
-    // vertical-align: baseline;
     svg {
       vertical-align: text-bottom;
       fill: white;
@@ -88,17 +83,12 @@ h2 {
     display: inline-block;
     color: inherit;
     text-decoration: none;
-    // align-self: flex-end;
     white-space: nowrap;
-    // vertical-align: baseline;
-    // justify-self: flex-end;
   }
   .home {
     flex-grow: 1;
     flex-shrink: 1;
     flex-basis: 0;
-    // min-width: fit-content;
-    // vertical-align: baseline;
   }
 
   .home:hover {
@@ -126,6 +116,36 @@ h2 {
   }
 }
 
+.header.mobile {
+  box-sizing: border-box;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1rem;
+  top: auto;
+  bottom: 0;
+  padding: 1rem 2rem;
+  display: grid;
+  grid-auto-flow: column;
+  background: linear-gradient(155deg, rgb(90, 182, 194) 0%, $primary-colour 100%);
+  justify-items: center;
+  border-radius: 2rem;
+  grid-template-columns: auto;
+  &.hide {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  a {
+    .icon {
+      fill: white;
+    }
+    .item {
+      display: flex;
+      align-content: center;
+    }
+  }
+}
+
 .footer {
   background-color: rgb(15, 15, 15);
   display: flex;
@@ -149,41 +169,6 @@ h2 {
   .section {
     width: 90vw;
     min-width: 0;
-  }
-  .header {
-    top: auto;
-    bottom: 0;
-    margin-bottom: 0;
-    &.hide {
-      transform: translateY(100%);
-    }
-    padding-left: 1rem;
-    padding-right: 1rem;
-    .home {
-      max-width: 0;
-      svg {
-        max-width: 5vw;
-      }
-      h3 {
-        vertical-align: text-bottom;
-        font-size: 1.5rem;
-        word-wrap: break-word;
-      }
-    }
-    .contact-info {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-      gap: 0.5rem;
-      // max-width: 100%;
-
-      a {
-        align-self: flex-end;
-        justify-self: flex-end;
-        vertical-align: bottom;
-        font-size: 1rem;
-      }
-    }
   }
 }
 
