--- a/src/stylesheets/Main.scss
+++ b/src/stylesheets/Main.scss
@@ -7,177 +7,95 @@
   text-decoration: none;
 }
 
+body {
+  color: white;
+  background-color: $dark;
+  font-size: 20px;
+}
+
 img {
   display: block;
 }
 
-#root {
-  display: flex;
-  flex-direction: column;
-}
+// #root {
+//   display: flex;
+//   flex-direction: column;
+// }
 
-h2 {
-  font-size: clamp(3rem, 5vw, 4rem);
-  color: $primary-colour;
-}
+// h2 {
+//   font-size: clamp(3rem, 5vw, 4rem);
+//   color: $primary-colour;
+// }
 
-.section {
-  margin-top: 1rem;
-  margin-bottom: 2rem;
-  font-size: 1rem;
-  width: 61.8%;
-  max-width: min(1000px, 100vw);
-  min-width: 600px;
-  align-self: center;
-}
+// .section {
+//   margin-top: 1rem;
+//   margin-bottom: 2rem;
+//   font-size: 1rem;
+//   width: 61.8%;
+//   max-width: min(1000px, 100vw);
+//   min-width: 600px;
+//   align-self: center;
+// }
 
-.card {
-  box-sizing: border-box;
-  border: rgb(197, 197, 197) 1px solid;
-  border-radius: 0.5rem;
-  padding: 2rem;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.075);
-}
+// .card {
+//   box-sizing: border-box;
+//   border: rgb(197, 197, 197) 1px solid;
+//   border-radius: 0.5rem;
+//   padding: 2rem;
+//   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.075);
+// }
 
-.button {
-  border: none;
-  outline: none;
-  align-self: center;
-  background-color: $primary-colour;
-  color: rgb(255, 255, 255);
-  font: inherit;
-  font-size: 1.5rem;
-  padding: 0.5rem 2rem;
-  border-radius: 0.4rem;
-  cursor: pointer;
-  transition: 0.2s;
-}
+// .button {
+//   border: none;
+//   outline: none;
+//   align-self: center;
+//   background-color: $primary-colour;
+//   color: rgb(255, 255, 255);
+//   font: inherit;
+//   font-size: 1.5rem;
+//   padding: 0.5rem 2rem;
+//   border-radius: 0.4rem;
+//   cursor: pointer;
+//   transition: 0.2s;
+// }
 
-.header {
-  display: flex;
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-  padding: 0.5rem 1rem;
-  max-width: 100vw;
-  align-items: baseline;
-  gap: 2rem;
-  z-index: 3;
-  color: white;
-  background-color: rgba(0, 0, 0, 0.795);
-  font-size: 1.5em;
-  transition: 500ms;
-  h3 {
-    display: inline-block;
-    font-size: clamp(0.8rem, 4.5vw, 1.7rem);
-    line-height: 1;
-    overflow-wrap: break-word;
-    svg {
-      vertical-align: text-bottom;
-      fill: white;
-      transition: 100ms;
-    }
-  }
-  a {
-    display: inline-block;
-    color: inherit;
-    text-decoration: none;
-    white-space: nowrap;
-  }
-  .home {
-    flex-grow: 1;
-    flex-shrink: 1;
-    flex-basis: 0;
-  }
+// .footer {
+//   background-color: rgb(15, 15, 15);
+//   display: flex;
+//   justify-content: center;
+// }
 
-  .home:hover {
-    h3 {
-      color: $secondary-colour;
-      svg {
-        fill: $secondary-colour;
-      }
-    }
-  }
+// .modal-background {
+//   position: fixed;
+//   inset: 0;
+//   background: rgba(0, 0, 0, 0.911);
+//   display: flex;
+//   justify-content: center;
+//   .form {
+//     margin: auto 0;
+//     animation: drop-in 0.4s ease-in-out 0s 1 forwards;
+//   }
+// }
 
-  .contact-info {
-    justify-content: flex-end;
-    flex-grow: 1;
-    flex-shrink: 1;
-    display: flex;
-    gap: 2rem;
-    font-size: clamp(0.7rem, 2.5vw, 1.5rem);
-    :hover {
-      color: $secondary-colour;
-    }
-  }
-  &.hide {
-    transform: translateY(-100%);
-  }
-}
+// @media screen and (max-width: $mobile-width) {
+//   .section {
+//     width: 90vw;
+//     min-width: 0;
+//   }
+// }
 
-.header.mobile {
-  box-sizing: border-box;
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 1rem;
-  top: auto;
-  bottom: 0;
-  padding: 1rem 2rem;
-  display: grid;
-  grid-auto-flow: column;
-  background: linear-gradient(155deg, rgb(90, 182, 194) 0%, $primary-colour 100%);
-  justify-items: center;
-  border-radius: 2rem;
-  grid-template-columns: auto;
-  &.hide {
-    transform: translateY(100%);
-    opacity: 0;
-  }
-  a {
-    .icon {
-      fill: white;
-    }
-    .item {
-      display: flex;
-      align-content: center;
-    }
-  }
-}
+// @media screen and (min-width: $mobile-width) {
+//   .header-content {
+//     margin-top: 2rem;
+//   }
+// }
 
-.footer {
-  background-color: rgb(15, 15, 15);
-  display: flex;
-  justify-content: center;
-}
-
-.modal-background {
-  position: fixed;
-  inset: 0;
-  background: rgba(0, 0, 0, 0.911);
-  z-index: 9;
-  display: flex;
-  justify-content: center;
-  .form {
-    margin: auto 0;
-    animation: drop-in 0.4s ease-in-out 0s 1 forwards;
-  }
-}
-
-@media screen and (max-width: $mobile-width) {
-  .section {
-    width: 90vw;
-    min-width: 0;
-  }
-}
-
-@keyframes drop-in {
-  0% {
-    opacity: 0;
-    transform: translateY(-80px);
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
+// @keyframes drop-in {
+//   0% {
+//     opacity: 0;
+//     transform: translateY(-80px);
+//   }
+//   100% {
+//     transform: translateY(0);
+//   }
+// }
