--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -1,10 +1,14 @@
 $primary-colour: rgb(85, 110, 151);
 $secondary-colour: rgb(171, 205, 230);
 $highlight-colour: rgb(0, 180, 204);
-$mobile-width: 650px;
+$mobile-width: 600px;
+
+$green: rgb(123, 165, 77);
+$purple: rgb(124, 65, 206);
+$dark: rgb(28, 28, 28);
 
 :export {
-  primaryColour: $primary-colour;
-  secondaryColour: $secondary-colour;
-  mobileWidth: $mobile-width;
+  primarycolour: $primary-colour;
+  secondarycolour: $secondary-colour;
+  mobilewidth: $mobile-width;
 }
