--- a/src/stylesheets/Main.scss
+++ b/src/stylesheets/Main.scss
@@ -13,8 +13,36 @@ body {
   font-size: 20px;
 }
 
+h1 {
+  color: white;
+}
+h2 {
+  font-size: 2rem;
+  color: $green;
+  margin-top: 1rem;
+}
+h3 {
+  font-size: 1.7rem;
+  color: $purple;
+  margin-top: 0.75rem;
+}
+p {
+  margin-top: 0.7rem;
+  line-height: 1.4;
+  margin-left: 1rem;
+}
+ul,
+ol {
+  list-style: none;
+  margin-left: 2rem;
+}
+
 img {
   display: block;
+}
+
+.clampvh {
+  height: 100vh;
 }
 
 // #root {
