--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -1,14 +1,17 @@
 $primary-colour: rgb(85, 110, 151);
 $secondary-colour: rgb(171, 205, 230);
 $highlight-colour: rgb(0, 180, 204);
-$mobile-width: 600px;
+$sm: 576px;
+$md: 768px;
+$lg: 992px;
 
 $green: rgb(123, 165, 77);
-$purple: rgb(124, 65, 206);
+// $purple: rgb(124, 65, 206);
+$purple: rgb(129, 83, 192);
 $dark: rgb(28, 28, 28);
 
-:export {
-  primarycolour: $primary-colour;
-  secondarycolour: $secondary-colour;
-  mobilewidth: $mobile-width;
-}
+// :export {
+//   primarycolour: $primary-colour;
+//   secondarycolour: $secondary-colour;
+//   mobilewidth: $mobile-width;
+// }
