--- a/src/stylesheets/Projects.scss
+++ b/src/stylesheets/Projects.scss
@@ -10,9 +10,11 @@
     height: 80vh;
     margin-left: 1rem;
     width: 250px;
+    font-size: 1.3rem;
     h2 {
       font-size: 1.5rem;
       color: $green;
+      margin-bottom: 0.5rem;
     }
   }
   nav {
@@ -24,8 +26,8 @@
       background-color: transparent;
       border: none;
       color: white;
+      font-size: inherit;
       cursor: pointer;
-      font-size: 1rem;
     }
   }
   main {
@@ -53,6 +55,29 @@
   }
   #details {
     height: 50%;
+    color: white;
+    p {
+      margin: 0;
+    }
+    a {
+      color: inherit;
+      display: inline-block;
+      transition: color 100ms;
+      text-decoration: underline;
+      &:hover {
+        color: $purple;
+      }
+    }
+    .project-details {
+      margin-left: 1rem;
+      display: grid;
+      grid-template-columns: min-content minmax(0, 1fr);
+      gap: 0.4rem 1rem;
+      .label {
+        font-weight: thin;
+        color: rgba(255, 255, 255, 0.647);
+      }
+    }
   }
 }
 
