--- a/src/stylesheets/Footer.scss
+++ b/src/stylesheets/Footer.scss
@@ -3,8 +3,25 @@
 footer {
   margin-top: auto;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem;
+  gap: 0;
+  background-color: rgba(0, 0, 0, 0.292);
+  a {
+    color: $green;
+  }
+  .contact-details {
+    display: grid;
+    gap: 3rem;
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 .socials {
   display: flex;
+  gap: 2rem;
+  img {
+    width: 2rem;
+  }
 }
