--- a/src/stylesheets/Home.scss
+++ b/src/stylesheets/Home.scss
@@ -1,19 +1,55 @@
-// .about p {
-//   font: inherit;
-//   font-size: 1.5rem;
-//   color: rgb(107, 107, 107);
-//   margin-bottom: 1rem;
-// }
+@import "_variables";
 
-// .about__items {
-//   display: flex;
-//   gap: 1rem;
-// }
-
-section {
-  margin: 1rem auto;
-  max-width: min(600px, 90vw);
+.header-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  padding: 1rem;
+  min-height: 100vh;
 }
 
-#feature {
+.title {
+  font-size: clamp(3rem, 10vw, 10rem);
+  font-weight: 300;
+}
+
+header {
+  h1 {
+    font-weight: inherit;
+    margin-bottom: 0.2em;
+    line-height: 1;
+  }
+
+  h2 {
+    font-weight: inherit;
+    color: rgba(255, 255, 255, 0.446);
+    font-size: 50%;
+  }
+
+  img {
+    background-color: $green;
+    border-radius: 50%;
+    border: white 10px solid;
+    max-width: 280px;
+  }
+}
+
+@media screen and (max-width: $sm) {
+  .header-content {
+    flex-direction: column;
+  }
+  header {
+    .title {
+      font-size: 12vw;
+      order: -1;
+      text-align: center;
+    }
+  }
+}
+
+@media screen and (min-width: $sm) {
+  .header-content {
+    margin-top: 2rem;
+  }
 }
