fix redundant styling files

--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -4,14 +4,8 @@ $highlight-colour: rgb(0, 180, 204);
 $sm: 576px;
 $md: 768px;
 $lg: 992px;
+$xl: 1200px;
 
 $green: rgb(123, 165, 77);
-// $purple: rgb(124, 65, 206);
 $purple: rgb(129, 83, 192);
 $dark: rgb(28, 28, 28);
-
-// :export {
-//   primarycolour: $primary-colour;
-//   secondarycolour: $secondary-colour;
-//   mobilewidth: $mobile-width;
-// }
