--- a/src/stylesheets/Main.scss
+++ b/src/stylesheets/Main.scss
@@ -50,85 +50,8 @@ a {
   color: $purple;
 }
 
-// #root {
-//   display: flex;
-//   flex-direction: column;
-// }
-
-// h2 {
-//   font-size: clamp(3rem, 5vw, 4rem);
-//   color: $primary-colour;
-// }
-
-// .section {
-//   margin-top: 1rem;
-//   margin-bottom: 2rem;
-//   font-size: 1rem;
-//   width: 61.8%;
-//   max-width: min(1000px, 100vw);
-//   min-width: 600px;
-//   align-self: center;
-// }
-
-// .card {
-//   box-sizing: border-box;
-//   border: rgb(197, 197, 197) 1px solid;
-//   border-radius: 0.5rem;
-//   padding: 2rem;
-//   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.075);
-// }
-
-// .button {
-//   border: none;
-//   outline: none;
-//   align-self: center;
-//   background-color: $primary-colour;
-//   color: rgb(255, 255, 255);
-//   font: inherit;
-//   font-size: 1.5rem;
-//   padding: 0.5rem 2rem;
-//   border-radius: 0.4rem;
-//   cursor: pointer;
-//   transition: 0.2s;
-// }
-
-// .footer {
-//   background-color: rgb(15, 15, 15);
-//   display: flex;
-//   justify-content: center;
-// }
-
-// .modal-background {
-//   position: fixed;
-//   inset: 0;
-//   background: rgba(0, 0, 0, 0.911);
-//   display: flex;
-//   justify-content: center;
-//   .form {
-//     margin: auto 0;
-//     animation: drop-in 0.4s ease-in-out 0s 1 forwards;
-//   }
-// }
-
-// @media screen and (max-width: $mobile-width) {
-//   .section {
-//     width: 90vw;
-//     min-width: 0;
-//   }
-// }
-
-// @media screen and (min-width: $mobile-width) {
-//   .header-content {
-//     margin-top: 2rem;
-//   }
-// }
-
-// @keyframes drop-in {
-//   0% {
-//     opacity: 0;
-//     transform: translateY(-80px);
-//   }
-//   100% {
-//     transform: translateY(0);
-//   }
-// }
+section {
+  margin: 1rem auto;
+  max-width: min(700px, 90vw);
+  margin-bottom: 2rem;
+}
