--- a/src/stylesheets/Effects.scss
+++ b/src/stylesheets/Effects.scss
@@ -1,8 +1,12 @@
+@import "_variables";
 .link-hover {
   transition: 200ms;
 }
 .link-hover:hover {
   transform: translateY(-2px);
-  // letter-spacing: 1px;
+  margin-bottom: 0 !important;
   border-bottom: solid 2px white !important;
+  a {
+    color: $green;
+  }
 }
