--- a/src/stylesheets/Main.scss
+++ b/src/stylesheets/Main.scss
@@ -3,7 +3,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Overpass", sans-serif;
+  font-family: "Raleway", sans-serif;
   text-decoration: none;
 }
 
