--- a/src/stylesheets/Projects.scss
+++ b/src/stylesheets/Projects.scss
@@ -129,6 +129,9 @@
   color: white;
   figcaption {
     color: white;
+    font-size: 1.7rem;
+    text-align: center;
+    padding: 0.4rem;
   }
   &:hover {
     opacity: 0.85;
@@ -145,6 +148,9 @@
 
 .project:first-of-type {
   grid-column: 1 / -1;
+  figcaption {
+    font-size: 2.4rem;
+  }
 }
 
 @media screen and (max-width: calc($md - 0.2px)) {
@@ -177,15 +183,14 @@
   }
 }
 
-@media screen and (min-width: $xl) {
+@media screen and (min-width: $lg) {
   #project-view {
     flex-direction: row;
     nav.project-nav {
-      position: fixed;
-      left: 1rem;
-      top: 4rem;
+      position: relative;
+
       display: flex;
-      width: 250px;
+      flex: 0 0 250px;
       h2 {
         margin-top: 0;
       }
@@ -203,6 +208,17 @@
           width: fit-content;
         }
       }
+    }
+  }
+}
+
+@media screen and (min-width: $xl) {
+  #project-view {
+    nav.project-nav {
+      position: fixed;
+      width: 250px;
+      left: 1rem;
+      top: 4rem;
     }
   }
 }
