--- a/src/stylesheets/Skills.scss
+++ b/src/stylesheets/Skills.scss
@@ -1,44 +1,40 @@
-// @import "_variables";
+@import "_variables";
 
-// .skills {
-//   display: flex;
-//   flex-direction: column;
-// }
+#skills {
+  h1 {
+    color: white;
+  }
+  h2 {
+    color: $green;
+  }
+  h3 {
+    color: $purple;
+  }
+  .ratings {
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+  }
+  article {
+    margin-bottom: 2rem;
+  }
+  span.stars {
+    display: inline-block;
+    right: 0;
+    margin-left: auto;
+    font-size: 1.3rem;
+    color: rgb(176, 176, 176);
+  }
+}
 
-// .skills ul {
-//   /* display: block; */
-//   list-style-type: none;
-//   width: 100%;
-//   max-width: 600px;
-//   align-self: center;
-// }
-// .skills ul li h3 {
-//   color: rgb(219, 116, 31);
-//   border-bottom: rgb(216, 216, 216) solid 1px;
-//   line-height: 1.3;
-//   margin-bottom: 0.5rem;
-// }
-// .skills ul li {
-//   font-size: 1.2rem;
-//   font-weight: bold;
-//   margin-top: 2rem;
-// }
-
-// .skills ul li p {
-//   font-size: clamp(1rem, 2vw, 1.2rem);
-//   color: rgb(54, 54, 54);
-//   font-weight: normal;
-//   text-align: left;
-//   margin-left: 3rem;
-//   text-align: justify;
-//   ul {
-//     list-style-type: disc;
-//     li {
-//       margin-top: auto;
-//     }
-//   }
-//   a {
-//     text-decoration: underline;
-//     color: $primary-colour;
-//   }
-// }
+@media screen and (max-width: $sm) {
+  #skills {
+    .ratings {
+      display: block;
+    }
+    span.stars {
+      display: block;
+      text-align: right;
+    }
+  }
+}
