skills page major content and layout work

--- a/src/stylesheets/Skills.scss
+++ b/src/stylesheets/Skills.scss
@@ -10,6 +10,9 @@
   h3 {
     color: $purple;
   }
+  p {
+    white-space: pre-line;
+  }
   .ratings {
     display: flex;
     justify-content: space-between;
