--- a/src/stylesheets/Main.scss
+++ b/src/stylesheets/Main.scss
@@ -52,8 +52,13 @@ a {
 
 section {
   margin: 1rem auto;
+  margin-top: 0;
   max-width: min(700px, 90vw);
   margin-bottom: 2rem;
+  h2 {
+    margin-top: 2rem;
+    border-bottom: solid 1px rgba(255, 255, 255, 0.377);
+  }
 }
 
 .code-block {
