--- a/src/stylesheets/Contact.scss
+++ b/src/stylesheets/Contact.scss
@@ -82,6 +82,7 @@ textarea:focus {
 /* style the submit button */
 form button {
   width: 100%;
+  height: 4rem;
   padding: 0.8rem;
   background-color: $purple;
   border: none;
